--- a/dz/index.html
+++ b/dz/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="jquery-3.5.1.min.js">
+    </script>
     <style>
         body {
             background-color: #87CEEB;
@@ -24,7 +26,18 @@
             padding-left: 1%;
         }
 
-        button {
+        #start-button {
+            display: block;
+            height: 0%;
+            background-color: rgb(0, 128, 255);
+            color: black;
+            border-color: black;
+            border-radius: 10px;
+            padding: 5px;
+        }
+
+        #end-button {
+            display: none;
             height: 0%;
             background-color: rgb(0, 128, 255);
             color: black;
@@ -34,19 +47,44 @@
         }
 
         #game {
-            text-align: center; 
+            display: block;
+            text-align: center;
             margin-top: 5%;
         }
 
+        #start-game {
+            display: none;
+            text-align: center;
+            margin-top: 5%;
+        }
+
+
         .game-images {
             display: flex;
-            justify-content: center; 
-            margin-top: 20px; 
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .game-images2 div,
+        .game-images div {
+            margin: 0 10px;
+            border: 2px solid black;
+            background-color: rgb(0, 128, 255);
+            border-radius: 7%;
+            padding: 2%;
+        }
+
+        .game-images2,
+        .game-images {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
         }
 
         .game-images div {
-            margin: 0 10px; 
+            margin: 0 10px;
             border: 2px solid black;
+            background-color: rgb(0, 128, 255);
             border-radius: 7%;
             padding: 2%;
         }
@@ -56,7 +94,8 @@
 <body>
     <header>
         <h2>Game "MEMORY"</h2>
-        <button>START</button>
+        <button id="start-button">START</button>
+        <button id="end-button">FINISH</button>
     </header>
     <div id="game">
         <div class="game-images">
@@ -65,13 +104,84 @@
             <div><img src="css3-alt.png" width="100"></div>
             <div><img src="visual-basic.png" width="100"></div>
         </div>
-        <div class="game-images">
+        <div class="game-images2">
             <div><img src="java.png" width="100"></div>
             <div><img src="css3-alt.png" width="100"></div>
             <div><img src="visual-basic.png" width="100"></div>
             <div><img src="atom.png" width="100"></div>
         </div>
     </div>
+    <div id="start-game">
+        <div class="game-images">
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+        </div>
+        <div class="game-images2">
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+            <div><img src="strength.png" width="100"></div>
+        </div>
+    </div>
+    <script>
+        $(document).ready(function () {
+            let newImage = ["atom.png", "java.png", "css3-alt.png", "visual-basic.png"];
+            let newImage2 = ["java.png", "css3-alt.png", "visual-basic.png", "atom.png"];
+            let elem1 = -1; // Используйте -1 для отсутствия выбранного элемента
+            let elem2 = -1;
+
+            $("#start-button").click(function () {
+                $("#game").fadeTo(1000, 0, function () {
+                    $(this).css("display", "none");
+                    $("#start-game").fadeTo(1000, 1);
+                });
+
+                $("#start-button").css("display", "none");
+                $("#end-button").css("display", "block");
+            });
+
+            $(".game-images div").click(function () {
+                $(this).fadeOut(1000, function () {
+                    let index = $(this).index();
+                    $(this).find("img").attr("src", newImage[index]);
+                    $(this).fadeIn(1000);
+                    elem1 = index;
+
+                    if (elem2 !== -1) {
+                        CheckResult();
+                    }
+                });
+            });
+
+            $(".game-images2 div").click(function () {
+                $(this).fadeOut(1000, function () {
+                    let index = $(this).index();
+                    $(this).find("img").attr("src", newImage2[index]);
+                    $(this).fadeIn(1000);
+                    elem2 = index;
+
+                    if (elem1 !== -1) {
+                        CheckResult();
+                    }
+                });
+            });
+
+            function CheckResult() {
+                if (newImage[elem1] === newImage2[elem2]) {
+                    alert("Они равны");
+                } else {
+                    alert("Они не равны");
+                }
+
+                // Сбросить выбранные элементы после проверки
+                elem1 = -1;
+                elem2 = -1;
+            }
+        });
+
+    </script>
 
 </body>
 
